syntax = "proto3";

package proto;

import "google/protobuf/any.proto";

message GoalMessageEnvelope {
  int32 id = 1;
  repeated google.protobuf.Any messages = 2;
}

message GoalError {
  int32 id = 1;
  string code = 2;
  repeated google.protobuf.Any details = 3;
}

message GoalPingRequest {
  int64 timestamp = 1;
}

message GoalPingResponse {
  int64 timestamp = 1;
}

service Ping {
  rpc Ping(GoalPingRequest) returns (GoalPingResponse);
}
